--- a/TeamSurveyProject/src/index.html
+++ b/TeamSurveyProject/src/index.html
@@ -3,12 +3,11 @@
 <head>
   <meta charset="utf-8">
   <title>Team Survey Project</title>
+  
   <base href="/">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="stylesheet" type="text/css" href="home.component.css">
 </head>
-<body>
-  <app-root></app-root>
-</body>
-</html>
+
