--- a/TeamSurveyProject/src/index.html
+++ b/TeamSurveyProject/src/index.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <html lang="en">
-    <head>
+  <head>
     <meta charset="utf-8">
     <title>Team Survey Project</title>
     <div style= "text-align:center">
@@ -10,25 +10,29 @@
              </h1>
     
      <base href="/">
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <link rel="stylesheet" type="text/css" href="home.component.css">
-</head>
-<body>
-<app-root></app-root>
-</body>
-<div class= "login-box">
+      <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+     <meta name="viewport" content="width=device-width, initial-scale=1">
+     <link rel="icon" type="image/x-icon" href="favicon.ico">
+     <link rel="stylesheet" type="text/css" href="home.component.css">
+  </head>
+  <body>
+  <app-root></app-root>
+  </body>
+  <div class= "login-box">
     <h1>Login Here</h1>
     <from>
       <p>Username</p>
       <input type= "text" name "username" placeholder="Enter Username">
       <p>Password</p>
-      <input type="text" name="password" placeholder="Enter password">
-      <button type="button">Start</button> 
-      <a href="#">Forget password</a>
+      <input type="password" name="password" placeholder="Enter password">
+      <a href= "next page"><button type="button">Start</button></a> 
+      <div style= "text-align:center">
+        <div>
+          
+      <a href="#">Forgot password</a>
     </from>
-
+    </div>
+  </div> 
   </div>
  </body>
 
